feat: add Redoc documentation for API, remove unused property update and delete endpoints from Swagger
