# docs/swagger.yaml
@@ -655,38 +655,6 @@ paths:
       tags:
       - Properties
   /properties/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: Delete a property by ID
-      parameters:
-      - description: Property ID
-        in: path
-        name: id
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "204":
-          description: No Content
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "404":
-          description: Not Found
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Delete a property
-      tags:
-      - Properties
     get:
       consumes:
       - application/json
@@ -719,52 +687,6 @@ paths:
       security:
       - BearerAuth: []
       summary: Get property by ID
-      tags:
-      - Properties
-    put:
-      consumes:
-      - application/json
-      description: Update an existing property record
-      parameters:
-      - description: Property ID
-        in: path
-        name: id
-        required: true
-        type: string
-      - description: Updated property data
-        in: body
-        name: property
-        required: true
-        schema:
-          $ref: '#/definitions/models.Property'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Property'
-        "400":
-          description: Bad Request
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "401":
-          description: Unauthorized
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-        "500":
-          description: Internal Server Error
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: Update a property
       tags:
       - Properties
   /properties/property-search:
